Text colors changed to white. Up & Down arrow icons are know shown properly. Size will be fixed later

--- a/src/GUI/ChangePasswordPage.form
+++ b/src/GUI/ChangePasswordPage.form
@@ -72,6 +72,8 @@
                 <properties>
                   <background color="-16768928"/>
                   <font size="22" style="1"/>
+                  <foreground color="-1"/>
+                  <selectedTextColor color="-1"/>
                 </properties>
               </component>
               <component id="401e7" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
@@ -83,6 +85,8 @@
                 <properties>
                   <background color="-16768928"/>
                   <font size="22" style="1"/>
+                  <foreground color="-1"/>
+                  <selectedTextColor color="-1"/>
                 </properties>
               </component>
             </children>
