--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="42" y="47" width="660" height="616"/>
+      <xy x="42" y="47" width="660" height="752"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
@@ -60,9 +60,7 @@
       </component>
       <component id="98fd4" class="javax.swing.JButton" binding="upScrollButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="50"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5131855"/>
