--- a/src/GUI/LPanel.form
+++ b/src/GUI/LPanel.form
@@ -1,107 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.LPanel">
-  <grid id="27dc6" binding="lPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="lPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="159" height="572"/>
+      <xy x="332" y="167" width="200" height="900"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
+      <maximumSize width="200" height="900"/>
+      <minimumSize width="200" height="900"/>
+      <preferredSize width="200" height="900"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="1d99" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1d99" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="true">
+            <minimum-size width="-1" height="51"/>
+            <preferred-size width="-1" height="51"/>
+            <maximum-size width="-1" height="51"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="5dc16" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
+          <component id="72ddb" class="javax.swing.JButton" binding="home">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="80" height="50"/>
+                <preferred-size width="80" height="50"/>
+                <maximum-size width="80" height="50"/>
+              </grid>
             </constraints>
             <properties>
-              <background color="-5131855"/>
-              <text value=""/>
+              <alignmentY value="0.0"/>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <focusCycleRoot value="false"/>
+              <focusPainted value="false"/>
+              <focusable value="true"/>
+              <font style="1"/>
+              <foreground color="-1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <opaque value="true"/>
+              <selected value="false"/>
+              <text value="Home"/>
+              <verticalAlignment value="0"/>
             </properties>
           </component>
-          <vspacer id="93893">
+          <component id="a35d6" class="javax.swing.JButton" binding="addProduct">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <component id="72ddb" class="javax.swing.JButton" binding="addProductButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="120" height="50"/>
+                <preferred-size width="120" height="50"/>
+                <maximum-size width="120" height="50"/>
+              </grid>
             </constraints>
             <properties>
-              <background color="-5131855"/>
-              <text value="addProduct"/>
+              <actionCommand value=""/>
+              <alignmentY value="0.0"/>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <defaultCapable value="true"/>
+              <font style="1"/>
+              <foreground color="-1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <inheritsPopupMenu value="false"/>
+              <label value="New Product"/>
+              <opaque value="true"/>
+              <text value="New Product"/>
+              <verticalAlignment value="0"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="4e83d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <component id="5dc16" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="220"/>
+            <preferred-size width="200" height="220"/>
+            <maximum-size width="200" height="220"/>
+          </grid>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="fb349" class="javax.swing.JButton" binding="category1IconButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-5131855"/>
-              <text value=""/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="f5095" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <properties>
+          <alignmentY value="0.0"/>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="true"/>
+          <defaultCapable value="false"/>
+          <hideActionText value="false"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <iconTextGap value="0"/>
+          <text value=""/>
+          <verticalAlignment value="1"/>
+        </properties>
+      </component>
+      <component id="29706" class="javax.swing.JButton" binding="category2IconButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="210"/>
+            <preferred-size width="200" height="210"/>
+            <maximum-size width="200" height="210"/>
+          </grid>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="29706" class="javax.swing.JButton" binding="category2IconButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-5131855"/>
-              <text value=""/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="25a85" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <properties>
+          <alignmentY value="0.0"/>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <horizontalAlignment value="2"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="877b9" class="javax.swing.JButton" binding="category3IconButton">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="210"/>
+            <preferred-size width="200" height="210"/>
+            <maximum-size width="200" height="210"/>
+          </grid>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="877b9" class="javax.swing.JButton" binding="category3IconButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-5131855"/>
-              <text value=""/>
-            </properties>
-          </component>
-        </children>
-      </grid>
+        <properties>
+          <alignmentY value="0.0"/>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <horizontalAlignment value="2"/>
+          <iconTextGap value="0"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="fb349" class="javax.swing.JButton" binding="category1IconButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="200" height="210"/>
+            <preferred-size width="200" height="210"/>
+            <maximum-size width="200" height="210"/>
+          </grid>
+        </constraints>
+        <properties>
+          <alignmentY value="0.0"/>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <horizontalAlignment value="0"/>
+          <text value=""/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
