--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,17 +3,20 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="42" y="47" width="660" height="752"/>
+      <xy x="42" y="47" width="1400" height="900"/>
     </constraints>
     <properties>
       <background color="-5131855"/>
+      <maximumSize width="1400" height="900"/>
+      <minimumSize width="1400" height="900"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="6d593" class="javax.swing.JButton" binding="product4">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -24,8 +27,9 @@
       </component>
       <component id="a8905" class="javax.swing.JButton" binding="product9">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -37,7 +41,8 @@
       <component id="46741" class="javax.swing.JButton" binding="product7">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -60,18 +65,10 @@
       </component>
       <component id="98fd4" class="javax.swing.JButton" binding="upScrollButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-5131855"/>
-          <borderPainted value="true"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="d1739" class="javax.swing.JButton" binding="product6">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="50"/>
+            <preferred-size width="-1" height="50"/>
+            <maximum-size width="-1" height="50"/>
           </grid>
         </constraints>
         <properties>
@@ -82,8 +79,10 @@
       </component>
       <component id="ee368" class="javax.swing.JButton" binding="product2">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -95,8 +94,9 @@
       </component>
       <component id="83686" class="javax.swing.JButton" binding="product3">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -107,8 +107,10 @@
       </component>
       <component id="cac45" class="javax.swing.JButton" binding="product5">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -119,8 +121,9 @@
       </component>
       <component id="a9e3e" class="javax.swing.JButton" binding="product12">
         <constraints>
-          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -132,7 +135,9 @@
       <component id="4df3" class="javax.swing.JTextField" binding="searchBar">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <minimum-size width="-1" height="50"/>
+            <preferred-size width="150" height="50"/>
+            <maximum-size width="-1" height="50"/>
           </grid>
         </constraints>
         <properties>
@@ -147,7 +152,11 @@
       </component>
       <component id="dbc39" class="javax.swing.JButton" binding="refreshButton">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="50"/>
+            <preferred-size width="-1" height="50"/>
+            <maximum-size width="-1" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <actionCommand value="refreshButton"/>
@@ -163,8 +172,9 @@
       </component>
       <component id="e85c5" class="javax.swing.JButton" binding="product10">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -175,7 +185,11 @@
       </component>
       <component id="32891" class="javax.swing.JComboBox" binding="filterComboBox">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="50"/>
+            <preferred-size width="-1" height="50"/>
+            <maximum-size width="-1" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-6094768"/>
@@ -189,8 +203,10 @@
       </component>
       <component id="f97ee" class="javax.swing.JButton" binding="product1">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="250"/>
+            <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -203,7 +219,7 @@
       </component>
       <component id="da1bb" class="javax.swing.JButton" binding="product11">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="150"/>
           </grid>
         </constraints>
@@ -217,6 +233,19 @@
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="150"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-5131855"/>
+          <borderPainted value="true"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="d1739" class="javax.swing.JButton" binding="product6">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="350" height="200"/>
+            <preferred-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
