--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -3,19 +3,31 @@
   <grid id="27dc6" binding="addPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1196" height="755"/>
+      <xy x="20" y="20" width="1400" height="900"/>
     </constraints>
     <properties>
+      <alignmentX value="0.0"/>
+      <alignmentY value="0.0"/>
+      <autoscrolls value="false"/>
       <background color="-5131855"/>
+      <maximumSize width="1400" height="900"/>
+      <minimumSize width="1400" height="900"/>
+      <preferredSize width="1400" height="900"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="930fb" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="250"/>
+            <preferred-size width="1400" height="250"/>
+            <maximum-size width="1400" height="250"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
           <doubleBuffered value="true"/>
         </properties>
@@ -58,11 +70,20 @@
       <grid id="c1f90" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="100" bottom="0" right="150"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="400"/>
+            <preferred-size width="1400" height="400"/>
+            <maximum-size width="1400" height="400"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="false"/>
+        </clientProperties>
         <border type="none"/>
         <children>
           <component id="78425" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -162,9 +183,15 @@
       <grid id="e28c4" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="250"/>
+            <preferred-size width="1400" height="250"/>
+            <maximum-size width="1400" height="250"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
