--- a/src/GUI/ChangePasswordPage.form
+++ b/src/GUI/ChangePasswordPage.form
@@ -3,19 +3,30 @@
   <grid id="27dc6" binding="passwordPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="828" height="589"/>
+      <xy x="20" y="20" width="1400" height="900"/>
     </constraints>
     <properties>
+      <alignmentX value="0.0"/>
+      <alignmentY value="0.0"/>
       <background color="-5131855"/>
+      <maximumSize width="1400" height="900"/>
+      <minimumSize width="1400" height="900"/>
+      <preferredSize width="1400" height="900"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="e0f7" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="300"/>
+            <preferred-size width="1400" height="300"/>
+            <maximum-size width="1400" height="300"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
@@ -24,9 +35,15 @@
       <grid id="cf683" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="50" bottom="0" right="50"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="300"/>
+            <preferred-size width="1400" height="300"/>
+            <maximum-size width="1400" height="300"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
@@ -116,9 +133,15 @@
       <grid id="139d2" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="4" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="1400" height="300"/>
+            <preferred-size width="1400" height="300"/>
+            <maximum-size width="1400" height="300"/>
+          </grid>
         </constraints>
         <properties>
+          <alignmentX value="0.0"/>
+          <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
         <border type="none"/>
