--- a/src/GUI/ProductPage.form
+++ b/src/GUI/ProductPage.form
@@ -77,7 +77,7 @@
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="16" style="0"/>
+              <font size="16" style="1"/>
               <foreground color="-16777216"/>
               <text value=""/>
             </properties>
@@ -97,7 +97,7 @@
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="16" style="0"/>
+              <font size="16" style="1"/>
               <foreground color="-16777216"/>
               <text value=""/>
             </properties>
@@ -107,8 +107,8 @@
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="14"/>
-              <foreground color="-16777216"/>
+              <font size="18" style="1"/>
+              <foreground color="-6094769"/>
               <text value="Details"/>
             </properties>
           </component>
@@ -152,6 +152,7 @@
         </constraints>
         <properties>
           <background color="-5131855"/>
+          <font size="14" style="1"/>
           <foreground color="-16777216"/>
         </properties>
       </component>
@@ -195,6 +196,9 @@
             </constraints>
             <properties>
               <background color="-16768928"/>
+              <disabledTextColor color="-1"/>
+              <font size="20" style="1"/>
+              <foreground color="-1"/>
               <text value=""/>
             </properties>
           </component>
@@ -211,6 +215,7 @@
             <constraints/>
             <properties>
               <background color="-5131855"/>
+              <font size="14" style="1"/>
             </properties>
           </component>
         </children>
