--- a/src/GUI/SignUpConfirmPage.form
+++ b/src/GUI/SignUpConfirmPage.form
@@ -65,6 +65,7 @@
             </constraints>
             <properties>
               <background color="-16768928"/>
+              <font size="14" style="1"/>
               <foreground color="-1"/>
               <text value=""/>
             </properties>
