--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -27,9 +27,10 @@
       </component>
       <component id="46741" class="javax.swing.JButton" binding="product7">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -66,7 +67,7 @@
       </component>
       <component id="ee368" class="javax.swing.JButton" binding="product2">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
             <maximum-size width="350" height="250"/>
@@ -81,7 +82,7 @@
       </component>
       <component id="83686" class="javax.swing.JButton" binding="product3">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
           </grid>
@@ -94,7 +95,7 @@
       </component>
       <component id="cac45" class="javax.swing.JButton" binding="product5">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
             <maximum-size width="350" height="250"/>
@@ -111,6 +112,7 @@
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -177,7 +179,7 @@
       </component>
       <component id="f97ee" class="javax.swing.JButton" binding="product1">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
             <maximum-size width="350" height="250"/>
@@ -193,8 +195,10 @@
       </component>
       <component id="da1bb" class="javax.swing.JButton" binding="product11">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="150"/>
+            <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -207,6 +211,8 @@
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="150"/>
+            <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -217,9 +223,10 @@
       </component>
       <component id="d1739" class="javax.swing.JButton" binding="product6">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="200"/>
             <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -230,9 +237,10 @@
       </component>
       <component id="e85c5" class="javax.swing.JButton" binding="product10">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
@@ -243,9 +251,10 @@
       </component>
       <component id="a8905" class="javax.swing.JButton" binding="product9">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="350" height="250"/>
             <preferred-size width="350" height="250"/>
+            <maximum-size width="350" height="250"/>
           </grid>
         </constraints>
         <properties>
