--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -16,10 +16,10 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="930fb" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="930fb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="1400" height="250"/>
             <preferred-size width="1400" height="250"/>
             <maximum-size width="1400" height="250"/>
@@ -35,42 +35,47 @@
         <children>
           <component id="b1577" class="javax.swing.JButton" binding="button1">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                <minimum-size width="150" height="-1"/>
-                <preferred-size width="150" height="116"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="280" height="200"/>
+                <preferred-size width="280" height="200"/>
+                <maximum-size width="280" height="200"/>
               </grid>
             </constraints>
             <properties>
-              <background color="-6094768"/>
-              <borderPainted value="false"/>
-              <contentAreaFilled value="false"/>
+              <background color="-5131855"/>
+              <borderPainted value="true"/>
+              <contentAreaFilled value="true"/>
+              <defaultCapable value="true"/>
+              <doubleBuffered value="false"/>
+              <enabled value="true"/>
+              <focusCycleRoot value="false"/>
+              <focusPainted value="false"/>
+              <focusTraversalPolicyProvider value="false"/>
+              <focusable value="true"/>
               <font size="16" style="1"/>
               <foreground color="-1"/>
               <hideActionText value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
+              <inheritsPopupMenu value="false"/>
+              <label value="ADD PHOTO"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <opaque value="true"/>
+              <requestFocusEnabled value="false"/>
+              <rolloverEnabled value="true"/>
+              <selected value="false"/>
               <text value="ADD PHOTO"/>
+              <verifyInputWhenFocusTarget value="true"/>
               <verticalAlignment value="0"/>
+              <visible value="true"/>
             </properties>
           </component>
-          <vspacer id="e9371">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <vspacer id="be44">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
         </children>
       </grid>
       <grid id="c1f90" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="100" bottom="0" right="150"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="1400" height="400"/>
             <preferred-size width="1400" height="400"/>
             <maximum-size width="1400" height="400"/>
@@ -180,10 +185,10 @@
           </component>
         </children>
       </grid>
-      <grid id="e28c4" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e28c4" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="1400" height="250"/>
             <preferred-size width="1400" height="250"/>
             <maximum-size width="1400" height="250"/>
