GUI alignment for sizes. All size settings are ready now. Only PasswordConfirmPage, loginPage and SignUpPage are not touched. Added new icons for LPanel.java

--- a/src/GUI/AddProductPage.form
+++ b/src/GUI/AddProductPage.form
@@ -42,9 +42,9 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-5131855"/>
+              <background color="-6094769"/>
               <borderPainted value="true"/>
-              <contentAreaFilled value="true"/>
+              <contentAreaFilled value="false"/>
               <defaultCapable value="true"/>
               <doubleBuffered value="false"/>
               <enabled value="true"/>
