--- a/src/GUI/ProductPage.form
+++ b/src/GUI/ProductPage.form
@@ -141,22 +141,6 @@
           </component>
         </children>
       </grid>
-      <component id="24ec" class="javax.swing.JEditorPane" binding="productDetails">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="1000" height="325"/>
-            <preferred-size width="1000" height="325"/>
-            <maximum-size width="1000" height="325"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-5131855"/>
-          <editable value="false"/>
-          <font name="Verdana" size="14" style="1"/>
-          <foreground color="-16777216"/>
-          <text value=""/>
-        </properties>
-      </component>
       <grid id="f8aa3" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -260,6 +244,8 @@
                   <alignmentX value="0.0"/>
                   <alignmentY value="0.0"/>
                   <background color="-16768928"/>
+                  <caretColor color="-1"/>
+                  <disabledTextColor color="-1"/>
                   <font name="Verdana" size="16" style="1"/>
                   <foreground color="-1"/>
                   <lineWrap value="true"/>
@@ -270,6 +256,22 @@
           </grid>
         </children>
       </grid>
+      <component id="24ec" class="javax.swing.JEditorPane" binding="productDetails">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="1000" height="310"/>
+            <preferred-size width="1000" height="310"/>
+            <maximum-size width="1000" height="310"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-5131855"/>
+          <editable value="false"/>
+          <font name="Verdana" size="14" style="1"/>
+          <foreground color="-16777216"/>
+          <text value=""/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
