--- a/src/GUI/LPanel.form
+++ b/src/GUI/LPanel.form
@@ -9,6 +9,7 @@
       <alignmentX value="0.0"/>
       <alignmentY value="0.0"/>
       <background color="-5131855"/>
+      <foreground color="-5131855"/>
       <maximumSize width="200" height="900"/>
       <minimumSize width="200" height="900"/>
       <preferredSize width="200" height="900"/>
@@ -18,10 +19,10 @@
       <grid id="1d99" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="true">
-            <minimum-size width="-1" height="51"/>
-            <preferred-size width="-1" height="51"/>
-            <maximum-size width="-1" height="51"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="true">
+            <minimum-size width="200" height="51"/>
+            <preferred-size width="200" height="51"/>
+            <maximum-size width="200" height="51"/>
           </grid>
         </constraints>
         <properties>
@@ -29,7 +30,9 @@
           <alignmentY value="0.0"/>
           <background color="-5131855"/>
         </properties>
-        <border type="none"/>
+        <border type="line">
+          <title-color color="-16768928"/>
+        </border>
         <children>
           <component id="72ddb" class="javax.swing.JButton" binding="home">
             <constraints>
@@ -85,85 +88,159 @@
           </component>
         </children>
       </grid>
-      <component id="5dc16" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
+      <grid id="955a1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="220"/>
             <preferred-size width="200" height="220"/>
             <maximum-size width="200" height="220"/>
           </grid>
         </constraints>
         <properties>
-          <alignmentY value="0.0"/>
           <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <contentAreaFilled value="true"/>
-          <defaultCapable value="false"/>
-          <hideActionText value="false"/>
-          <horizontalAlignment value="0"/>
-          <horizontalTextPosition value="0"/>
-          <iconTextGap value="0"/>
-          <text value=""/>
-          <verticalAlignment value="0"/>
-          <verticalTextPosition value="0"/>
+          <foreground color="-5131855"/>
         </properties>
-      </component>
-      <component id="29706" class="javax.swing.JButton" binding="category2IconButton" default-binding="true">
+        <border type="line">
+          <title-color color="-16768928"/>
+        </border>
+        <children>
+          <component id="371d8" class="javax.swing.JButton" binding="profilePhotoButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="196" height="220"/>
+                <preferred-size width="196" height="220"/>
+                <maximum-size width="196" height="220"/>
+              </grid>
+            </constraints>
+            <properties>
+              <alignmentY value="0.0"/>
+              <background color="-5131855"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="true"/>
+              <defaultCapable value="false"/>
+              <hideActionText value="false"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <iconTextGap value="0"/>
+              <text value=""/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="ce382" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="210"/>
             <preferred-size width="200" height="210"/>
             <maximum-size width="200" height="210"/>
           </grid>
         </constraints>
         <properties>
-          <alignmentY value="0.0"/>
           <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <horizontalAlignment value="0"/>
-          <horizontalTextPosition value="0"/>
-          <text value=""/>
-          <verticalAlignment value="0"/>
-          <verticalTextPosition value="0"/>
+          <foreground color="-5131855"/>
         </properties>
-      </component>
-      <component id="fb349" class="javax.swing.JButton" binding="category1IconButton" default-binding="true">
+        <border type="line">
+          <title-color color="-16768928"/>
+        </border>
+        <children>
+          <component id="fb349" class="javax.swing.JButton" binding="category1IconButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="195" height="210"/>
+                <preferred-size width="195" height="210"/>
+                <maximum-size width="195" height="210"/>
+              </grid>
+            </constraints>
+            <properties>
+              <alignmentY value="0.0"/>
+              <background color="-5131855"/>
+              <borderPainted value="false"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value=""/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="8eccc" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="210"/>
             <preferred-size width="200" height="210"/>
             <maximum-size width="200" height="210"/>
           </grid>
         </constraints>
         <properties>
-          <alignmentY value="0.0"/>
           <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <horizontalAlignment value="0"/>
-          <horizontalTextPosition value="0"/>
-          <text value=""/>
-          <verticalAlignment value="0"/>
-          <verticalTextPosition value="0"/>
         </properties>
-      </component>
-      <component id="877b9" class="javax.swing.JButton" binding="category3IconButton">
+        <border type="line">
+          <title-color color="-16768928"/>
+        </border>
+        <children>
+          <component id="29706" class="javax.swing.JButton" binding="category2IconButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="195" height="210"/>
+                <preferred-size width="195" height="210"/>
+                <maximum-size width="195" height="210"/>
+              </grid>
+            </constraints>
+            <properties>
+              <alignmentY value="0.0"/>
+              <background color="-5131855"/>
+              <borderPainted value="false"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value=""/>
+              <verticalAlignment value="0"/>
+              <verticalTextPosition value="0"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="b71df" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="210"/>
             <preferred-size width="200" height="210"/>
             <maximum-size width="200" height="210"/>
           </grid>
         </constraints>
         <properties>
-          <alignmentY value="0.0"/>
           <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <horizontalAlignment value="0"/>
-          <horizontalTextPosition value="0"/>
-          <iconTextGap value="0"/>
-          <text value=""/>
         </properties>
-      </component>
+        <border type="line">
+          <title-color color="-16768928"/>
+        </border>
+        <children>
+          <component id="877b9" class="javax.swing.JButton" binding="category3IconButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="195" height="210"/>
+                <preferred-size width="195" height="210"/>
+                <maximum-size width="195" height="210"/>
+              </grid>
+            </constraints>
+            <properties>
+              <alignmentY value="0.0"/>
+              <background color="-5131855"/>
+              <borderPainted value="false"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <iconTextGap value="0"/>
+              <text value=""/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
