--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -10,7 +10,7 @@
       <maximumSize width="1400" height="900"/>
       <minimumSize width="1400" height="900"/>
     </properties>
-    <border type="none"/>
+    <border type="etched"/>
     <children>
       <component id="6d593" class="javax.swing.JButton" binding="product4">
         <constraints>
@@ -23,21 +23,6 @@
         <properties>
           <background color="-5131855"/>
           <borderPainted value="false"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="46741" class="javax.swing.JButton" binding="product7">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="345" height="245"/>
-            <preferred-size width="345" height="245"/>
-            <maximum-size width="345" height="245"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <horizontalTextPosition value="0"/>
           <text value=""/>
         </properties>
       </component>
@@ -64,22 +49,6 @@
         <properties>
           <background color="-5131855"/>
           <borderPainted value="true"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="ee368" class="javax.swing.JButton" binding="product2">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="345" height="245"/>
-            <preferred-size width="345" height="245"/>
-            <maximum-size width="345" height="245"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-5131855"/>
-          <borderPainted value="false"/>
-          <contentAreaFilled value="true"/>
-          <horizontalTextPosition value="0"/>
           <text value=""/>
         </properties>
       </component>
@@ -266,6 +235,37 @@
         <properties>
           <background color="-5131855"/>
           <borderPainted value="false"/>
+          <horizontalTextPosition value="0"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="46741" class="javax.swing.JButton" binding="product7">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="345" height="245"/>
+            <preferred-size width="345" height="245"/>
+            <maximum-size width="345" height="245"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <horizontalTextPosition value="0"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="ee368" class="javax.swing.JButton" binding="product2">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="345" height="245"/>
+            <preferred-size width="345" height="245"/>
+            <maximum-size width="345" height="245"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-5131855"/>
+          <borderPainted value="false"/>
+          <contentAreaFilled value="true"/>
           <horizontalTextPosition value="0"/>
           <text value=""/>
         </properties>
